# WindowTranscibeShortcut

./: .env.example  .gitignore  LICENSE  README.md  config.json  config_ui.py  create_shortcut.bat  install.bat  main.py  monitor.py  pyproject.toml  scripts_test_sample.py  start.vbs  transcriber.py  translator.py  tray_manager.py
apps/orchestrator/: README.md  pyproject.toml
apps/orchestrator/src/window_transcribe_shortcut/: __init__.py  __main__.py  api.py  api_models.py  cli.py  config.py  main.py  models.py  pipeline.py  server.py
apps/orchestrator/src/window_transcribe_shortcut/clients/: __init__.py  transcribe.py  transcribe_client.py  translation.py  translation_client.py
apps/orchestrator/src/window_transcribe_shortcut/presets/: __init__.py  profiles.py
apps/orchestrator/src/window_transcribe_shortcut/utils/: __init__.py  logging.py  paths.py  subtitles.py
apps/transcribe-service/: .env.example  README.md  entrypoint.sh  pyproject.toml
apps/transcribe-service/src/transcribe_service/: __init__.py  __main__.py  api.py  api_models.py  config.py  models.py  pipeline.py  server.py  test_gpu.py
apps/transcribe-service/src/transcribe_service/asr/: __init__.py  base.py  whisperx_backend.py
apps/transcribe-service/src/window_transcribe_transcribe_service/: __init__.py  api.py  api_models.py  config.py  models.py  pipeline.py  server.py
apps/transcribe-service/src/window_transcribe_transcribe_service/asr/: base.py  whisperx_backend.py
apps/translation-service/: .env.example  README.md  pyproject.toml
apps/translation-service/src/window_transcribe_translation_service/: __main__.py  api.py  api_models.py  config.py  pipeline.py  server.py
apps/translation-service/src/window_transcribe_translation_service/providers/: __init__.py  base.py  deepl_backend.py  experimental_backend.py  http_backend.py  router.py
apps/translation-service/src/window_transcribe_translation_service/translators/: deepl_backend.py  http_backend.py
sample/: README.md  en_to_zh.bat
scripts/: en_to_zh.bat  ja_to_zh.bat  start_all_servers.bat  start_all_servers.ps1  start_api_server.bat  stop_all_servers.bat  stop_all_servers.ps1  test_whisper_sample.py  transcribe_zh.bat  zh_to_zh.bat
src/shared/contracts/: __init__.py  api.py
src/window_transcribe_shortcut/: __init__.py  api.py  api_models.py  cli.py  config.py  config_ui.py  io_utils.py  logging_utils.py  main.py  monitor.py  pipeline.py  server.py  subtitle_formats.py  transcriber.py  translator.py  tray_manager.py
src/window_transcribe_shortcut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/window_transcribe_shortcut/asr/: __init__.py  base.py  whisperx_backend.py
src/window_transcribe_shortcut/presets/: __init__.py  profiles.py
src/window_transcribe_shortcut/translators/: __init__.py  base.py  deepl_backend.py  google_web_backend.py  http_backend.py  libretranslate_backend.py
src/window_transcribe_shortcut/utils/: __init__.py  logging.py  paths.py  subtitles.py
test/: conftest.py  scripts_test_sample.py  test_modules_basic.py  test_transcription.py
tests/: test_config.py  test_pipeline_translation.py
