[project]
name = "window-transcribe-shortcut-orchestrator"
version = "0.1.0"
description = "Orchestrator app for subtitle jobs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "loguru",
  "pydantic-settings",
  "requests",
  "srt",
  "uvicorn",
]

[project.scripts]
window-transcribe-shortcut = "window_transcribe_shortcut.main:main"
window-transcribe-shortcut-api = "window_transcribe_shortcut.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
