[project]
name = "window-transcribe-transcribe-service"
version = "0.1.0"
description = "ASR-only WhisperX transcription service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi",
  "loguru",
  "pydantic-settings",
  "uvicorn",
  "whisperx",
  "torch",
  "torchvision",
  "torchaudio",
]

[project.scripts]
transcribe-service-api = "transcribe_service.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true