[project]
name = "window-transcribe-translation-service"
version = "0.1.0"
description = "Translation service for subtitle lines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "loguru",
  "pydantic-settings",
  "requests",
  "uvicorn",
]

[project.scripts]
window-transcribe-translation-service-api = "window_transcribe_translation_service.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
